manifests/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
