manifests/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
